<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kulnois.triviadev.ui.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/fade_int"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_in_right"/>
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.kulnois.triviadev.ui.fragment.GameFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:enterAnim="@anim/fade_int"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_in_right"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:enterAnim="@anim/fade_int"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_in_right"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.kulnois.triviadev.ui.fragment.GameOverFragment"
        android:label="@string/game_over"
        tools:layout="@layout/fragment_game_over" >
        <action
            android:id="@+id/action_gameOverFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/homeFragment"/>
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.kulnois.triviadev.ui.fragment.GameWonFragment"
        android:label="@string/game_won"
        tools:layout="@layout/fragment_game_won" >
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/homeFragment"/>

        <argument
            android:name="numQuestions"
            app:argType="integer" />
        <argument
            android:name="numCorrect"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/gameRulesFragment"
        android:name="com.kulnois.triviadev.ui.fragment.GameRulesFragment"
        android:label="@string/rules"
        tools:layout="@layout/fragment_game_rules" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.kulnois.triviadev.ui.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>