<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kulnois.triviadev.ui.fragment.GameFragment" >

    <data>
        <variable
            name="question"
            type="com.kulnois.triviadev.ui.fragment.GameFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_header_game_height"
                android:layout_marginStart="@dimen/layout_margin_content"
                android:layout_marginTop="@dimen/layout_margin_content"
                android:layout_marginEnd="@dimen/layout_margin_content"
                android:layout_marginBottom="@dimen/layout_margin_content"
                android:scaleType="fitCenter"
                android:src="@drawable/header_game"
                app:layout_constraintBottom_toTopOf="@+id/questionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/questionText"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_margin"
                android:layout_marginTop="@dimen/layout_margin_content"
                android:layout_marginEnd="@dimen/question_margin"
                android:text="@{question.currentQuestion.text}"
                android:theme="@style/QuestionGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionImage"
                tools:text="@string/question_text" />

            <RadioGroup
                android:id="@+id/questionRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_margin"
                android:layout_marginTop="@dimen/layout_margin_content"
                android:layout_marginEnd="@dimen/question_margin"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionText">

                <RadioButton
                    android:id="@+id/firstAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/question_vertical_margin"
                    android:checked="true"
                    android:text="@{question.answers[0]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="@string/answer_default" />

                <RadioButton
                    android:id="@+id/secondAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/question_vertical_margin"
                    android:text="@{question.answers[1]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="@string/answer_default" />

                <RadioButton
                    android:id="@+id/thirdAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/question_vertical_margin"
                    android:text="@{question.answers[2]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="@string/answer_default" />

                <RadioButton
                    android:id="@+id/fourthAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{question.answers[3]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="@string/answer_default" />
            </RadioGroup>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_margin"
                android:layout_marginTop="@dimen/layout_margin_content"
                android:layout_marginEnd="@dimen/question_margin"
                android:text="@string/submit_button"
                style="@style/AppButtonPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>